# skeleton

./: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  copynotice.h
include/: Makefile.am  Makefile.in  skeleton.h
lib/: Makefile.am  Makefile.in  skeleton.c
po/: LINGUAS  Makevars  POTFILES.in  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  en_AU.gmo  en_AU.po  skeleton.pot
src/: Makefile.am  Makefile.in  main.c
tests/: Makefile.am  Makefile.in  help_test.sh  no_args_test.sh  version_test.sh  wrong_args_test.sh
