# Copyright (C) 2015 Stuart Bassett

# This program is free software: you can redistruibte it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the license, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>

#Prelude
AC_INIT([skeleton], [1.0.0], [stuart21295@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])

AM_PROG_AR
LT_INIT

AM_GNU_GETTEXT_VERSION([0.19.2])
AM_GNU_GETTEXT([external])

#Checks for programs
AC_PROG_CC

#Checks for libraries

#Checks for header files

#Checks for typedefs, sturctures, and compiler characteristics

#Checks for library functions

#Output files
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile lib/Makefile src/Makefile po/Makefile.in include/Makefile tests/Makefile])
AC_OUTPUT
