# Copyright (C) 2015 Stuart Bassett

# This program is free software: you can redistruibte it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the license, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>

EXTRA_DIST = help_test.sh no_args_test.sh version_test.sh wrong_args_test.sh
TESTS = help_test.sh no_args_test.sh version_test.sh wrong_args_test.sh
